--- a/Chatbot.html
+++ b/Chatbot.html
@@ -157,17 +157,17 @@
         });
     </script>
     <script>
-      window.watsonAssistantChatOptions = {
-        integrationID: "bf4b8cc6-95c5-427c-8aa2-d2897483bb41", // The ID of this integration.
-        region: "au-syd", // The region your integration is hosted in.
-        serviceInstanceID: "315197c8-8461-4857-bf2e-7e6f99c1a270", // The ID of your service instance.
-        onLoad: function(instance) { instance.render(); }
-      };
-      setTimeout(function(){
-        const t=document.createElement('script');
-        t.src="https://web-chat.global.assistant.watson.appdomain.cloud/versions/" + (window.watsonAssistantChatOptions.clientVersion || 'latest') + "/WatsonAssistantChatEntry.js";
-        document.head.appendChild(t);
-      });
-    </script>
+        window.watsonAssistantChatOptions = {
+          integrationID: "70febe50-d531-45f2-aa5e-1f2505ed4a3b", // The ID of this integration.
+          region: "jp-tok", // The region your integration is hosted in.
+          serviceInstanceID: "95878937-ef40-4548-8c56-b603b921a1a6", // The ID of your service instance.
+          onLoad: async (instance) => { await instance.render(); }
+        };
+        setTimeout(function(){
+          const t=document.createElement('script');
+          t.src="https://web-chat.global.assistant.watson.appdomain.cloud/versions/" + (window.watsonAssistantChatOptions.clientVersion || 'latest') + "/WatsonAssistantChatEntry.js";
+          document.head.appendChild(t);
+        });
+      </script>
 </body>
 </html>
